--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
 
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css">
-    <link rel="stylesheet" href="./styles/media768.css">
-    <link rel="stylesheet" href="./styles/media1024.css">
     <title>Сложно сосредоточиться</title>
   </head>
   <body class="page">
@@ -62,21 +60,22 @@
       <!------------------------------------------------------------------------------------------->
       <section class="why section-content">
         <h2 class="why__main-header main-header">Почему сосредоточиться так сложно</h2>
-        <h3 class="why__minor-header minor-header">Многозадачность</h3>
         <article class="why__article article">
+          <h3 class="why__minor-header minor-header">Многозадачность</h3>
           <p>
             Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же 
             легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам 
             этого мира)? А дело в том, что её просто не существует. Исследователи 
-            <a href="#" class="article__link"  target="_blank">выяснили</a>, 
+            <a href="https://www.dana.org/article/multicosts-of-multitasking/" 
+            class="article__link"  target="_blank">выяснили</a>, 
             что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле 
             внимания попадает несколько важных задач, организм паникует и выделяет кортизол и 
             адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и 
             быстро устаём.
           </p>
         </article>
-        <h3 class="why__minor-header minor-header">Дофамин</h3>
         <article class="why__article article">
+          <h3 class="why__minor-header minor-header">Дофамин</h3>
           <p>
             С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности 
             сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество 
@@ -90,8 +89,8 @@
       <!------------------------------------------------------------------------------------------->
       <section class="what section-content">
         <h2 class="what__main-header main-header">Что снижает концентрацию внимания?</h2>
-        <h3 class="what__minor-header what__minor-header-1 minor-header">Многозадачность</h3>
-        <article class="what__article what__article-1 article">
+        <article class="what__article article">
+          <h3 class="what__minor-header minor-header">Многозадачность</h3>
           <p>
             Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко 
             меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет 
@@ -99,8 +98,8 @@
             Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
           </p>
         </article>
-        <h3 class="what__minor-header what__minor-header-2 minor-header">Еда</h3>
-        <article class="what__article what__article-2 article">
+        <article class="what__article article">
+          <h3 class="what__minor-header minor-header">Еда</h3>
           <p>
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают 
             ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем 
@@ -108,8 +107,8 @@
             усталость и сонливость. И хотим ещё больше быстрых углеводов.
           </p>
         </article>
-        <h3 class="what__minor-header what__minor-header-3 minor-header">Гаджеты</h3>
-        <article class="what__article what__article-3 article">
+        <article class="what__article article">
+          <h3 class="what__minor-header minor-header">Гаджеты</h3>
           <p>
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере 
             фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на 
@@ -124,50 +123,53 @@
         <h2 class="how__main-header main-header">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
         </h2>
-        <h3 class="how__minor-header minor-header">5 простых (на самом деле не очень) советов</h3>
-        <h4 class="how__low-header minor-header low-header">Представьте небо и облака</h4>
         <article class="how__article article">
-          <p>
-            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно 
-            тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно 
-            закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их 
-            ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет 
-            вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
-          </p>
-        </article>
-        <h4 class="how__low-header minor-header low-header">Включите музыку</h4>
-        <article class="how__article article">
-          <p>
-            Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые 
-            тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще 
-            попробовать включить плейлист в «белым шумом» или нейромузыкой.
-          </p>
-        </article>
-        <h4 class="how__low-header minor-header low-header">Прогуляйтесь</h4>
-        <article class="how__article article">
-          <p>
-            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент 
-            <a href="#" class="article__link" target="_blank">показал</a>, что созерцание природы 
-            повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. 
-            Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше 
-            кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
-          </p>
-        </article>
-        <h4 class="how__low-header minor-header low-header">Хорошо ешьте</h4>
-        <article class="how__article article">
-          <p>
-            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким 
-            скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые 
-            (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
-          </p>
-        </article>
-        <h4 class="how__low-header minor-header low-header">Читайте</h4>
-        <article class="how__article article">
-          <p>
-            Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, 
-            достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на 
-            несколько часов и круто тренирует направленное внимание.
-          </p>
+          <h3 class="how__minor-header minor-header">5 простых (на самом деле не очень) советов</h3>
+          <div class="article"> 
+            <h4 class="how__low-header minor-header low-header">Представьте небо и облака</h4>
+            <p>
+              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно 
+              тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно 
+              закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их 
+              ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет 
+              вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
+            </p>
+          </div>
+          <div class="article">
+            <h4 class="how__low-header minor-header low-header">Включите музыку</h4>
+            <p>
+              Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые 
+              тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще 
+              попробовать включить плейлист в «белым шумом» или нейромузыкой.
+            </p>
+          </div>
+          <div class="article">
+            <h4 class="how__low-header minor-header low-header">Прогуляйтесь</h4>
+            <p>
+              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент 
+              <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" 
+              class="article__link" target="_blank">показал</a>, что созерцание природы 
+              повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. 
+              Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше 
+              кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+            </p>
+          </div>
+          <div class="article">
+            <h4 class="how__low-header minor-header low-header">Хорошо ешьте</h4>
+            <p>
+              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким 
+              скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые 
+              (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+            </p>
+          </div>
+          <div class="article">
+            <h4 class="how__low-header minor-header low-header">Читайте</h4>
+            <p>
+              Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, 
+              достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на 
+              несколько часов и круто тренирует направленное внимание.
+            </p>
+          </div>
         </article>
       </section>
       <!------------------------------------------------------------------------------------------->
@@ -178,27 +180,27 @@
           src="./images/sunset.png"    
           class="figure__img-1 figure__img"
           loading="lazy"
-          alt="sunset">
+          alt="Закат в горах">
           <img 
           src="./images/ice-cream.png"
           class="figure__img-2 figure__img"
           loading="lazy"
-          alt="ice-cream">
+          alt="Тарелка с мороженым">
           <img 
           src="./images/tape.png"      
           class="figure__img-3 figure__img"
           loading="lazy"
-          alt="tape">
+          alt="Касета">
           <img 
           src="./images/books.png"     
           class="figure__img-4 figure__img"
           loading="lazy"
-          alt="books">
+          alt="Стопка книг">
           <img 
           src="./images/street.png"    
           class="figure__img-5 figure__img"
           loading="lazy"
-          alt="street">
+          alt="Улица в городе ">
         </div>
       </section>
     </main>
